--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
 </head>
 <body>
 	<div class="main-container">
-		
-	</div>
-	
-	
+		<div class="navbar">
+			<h2>NavBar</h2>
+			<ul>
+				<li>Home</li>
+				<li>About</li>
+				<li>Info</li>
+				<li>Services</li>
+				<li>Contact</li>
+			</ul>
+		</div>
+
+	</div>	
 </body>
 </html>
