--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="main-container">
 		<div class="navbar">
-			<h2>NavBar</h2>
+			<h2>NavBar Design</h2>
 			<ul>
 				<li>Home</li>
 				<li>About</li>
